F&GDEV/src/objects/Marketing_to_Project_Association__c.object
<CustomObject>
    <fields>
        <fullName>Form_Description__c</fullName>
        <formula>Marketing_Material__r.Form_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Material__c</fullName>
        <label>Marketing Materials</label>
        <referenceTo>Marketing_Materials__c</referenceTo>
        <relationshipLabel>Marketing to Project Associations</relationshipLabel>
        <relationshipName>Marketing_to_Project_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Marketing to Project Associations</relationshipLabel>
        <relationshipName>Marketing_to_Project_Associations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Marketing to Project Association</label>
    <nameField>
        <displayFormat>MMPROJ-{000000}</displayFormat>
        <label>Marketing to Project Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing to Project Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>